--- a/biblioteca-online/package.json
+++ b/biblioteca-online/package.json
@@ -6,23 +6,26 @@
     "@date-io/date-fns": "^3.0.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.5",
-    "@mui/lab": "^6.0.0-beta.13",
-    "@mui/material": "^6.1.5",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/lab": "^7.0.0-beta.10",
+    "@mui/material": "^7.0.1",
     "@mui/x-date-pickers": "^7.21.0",
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "date-fns": "^4.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@testing-library/user-event": "^14.0.0",
+    "date-fns": "^3.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^5.4.2",
-    "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.20.0",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.13.0",
     "validator": "^13.12.0",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -48,7 +51,11 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  "overrides": {
+    "nth-check": "2.0.1",
+    "css-select": "4.0.0",
+    "svgo": "3.0.2",
+    "postcss": "8.4.31",
+    "resolve-url-loader": "5.0.0"
   }
 }
