--- a/biblioteca-online/package.json
+++ b/biblioteca-online/package.json
@@ -13,6 +13,8 @@
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.0.0",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.0.0",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +23,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.13.0",
+    "schema-utils": "^4.0.0",
     "validator": "^13.12.0",
     "web-vitals": "^2.1.4"
   },
